@@ -1,0 +1,8 @@
+# Config for Serious Sam SMS
+gametype SMS new extend GPS
+   name = Serious Sam
+   default port = 25600
+   status port offset = 1
+   template var = SERIOUSSAM
+   game rule = gametype
+end
