@@ -1,3 +1,6 @@
+May 20, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- install a qstat.cfg to $datadir/xqf to make ssam work out of the box
+
 May 20, 2003: Jordi Mallach <jordi@sindominio.net>
 - update Catalan and Spanish translations
 
